--- a/config/boards/shields/gigapad/gigapad.conf
+++ b/config/boards/shields/gigapad/gigapad.conf
@@ -2,3 +2,4 @@ CONFIG_ZMK_USB_LOGGING=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
