--- a/config/west.yml
+++ b/config/west.yml
@@ -1,7 +1,7 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/ftc/
+      url-base: https://github.com/zmkfirmware
     - name: caksoylar  # <-- new entry
       url-base: https://github.com/caksoylar
     # Additional modules containing boards/shields/custom code can be listed here as well
@@ -9,7 +9,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: mouse-ftc
+      revision: main
       import: app/west.yml
     - name: zmk-rgbled-widget  # <-- new entry
       remote: caksoylar
