--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/petejohanson
-    - name: caksoylar  # <-- new entry
+    - name: caksoylar
       url-base: https://github.com/caksoylar
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: inorichi
+      url-base: https://github.com/inorichi
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -13,6 +13,9 @@ manifest:
       import: app/west.yml
     - name: zmk-rgbled-widget  # <-- new entry
       remote: caksoylar
+      revision: main
+    - name: zmk-pmw3610-driver
+      remote: inorichi
       revision: main
   self:
     path: config
