--- a/config/boards/shields/gigapad/gigapad.conf
+++ b/config/boards/shields/gigapad/gigapad.conf
@@ -4,3 +4,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_PMW3610=y
