--- a/config/boards/shields/gigapad/gigapad.conf
+++ b/config/boards/shields/gigapad/gigapad.conf
@@ -2,8 +2,22 @@ CONFIG_ZMK_USB_LOGGING=n
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_MOUSE=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+
 CONFIG_SPI=y
 CONFIG_INPUT=y
+CONFIG_ZMK_MOUSE=y
+
 CONFIG_PMW3610=y
+CONFIG_PMW3610_CPI=2400
+CONFIG_PMW3610_CPI_DIVIDOR=4
+CONFIG_PMW3610_ORIENTATION_180=y
+CONFIG_PMW3610_SNIPE_CPI=800
+CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
+CONFIG_PMW3610_SCROLL_TICK=32
+
+CONFIG_PMW3610_FORCE_AWAKE=y
+
+CONFIG_PMW3610_POLLING_RATE_125_SW=y
+
+CONFIG_PMW3610_SMART_ALGORITHM=y
