--- a/config/boards/shields/gigapad/gigapad.conf
+++ b/config/boards/shields/gigapad/gigapad.conf
@@ -1,7 +1,7 @@
-CONFIG_ZMK_USB_LOGGING=n
+// CONFIG_ZMK_USB_LOGGING=n
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+// CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 
 CONFIG_SPI=y
